# yuechuan-webver

./: .gitignore  README.md  manage.py  pyproject.toml
AI/: models.py  slide_generator.py  te.py  urls.py  views.py
AI/migrations/: 0001_initial.py  0002_slidegeneration_result.py  0003_alter_slidegeneration_result.py  0004_slidegeneration_status.py  0005_alter_slidegeneration_cover.py  0006_alter_slidegeneration_cover.py
AI/templates/AI/: base.html  (+2 more)
adminc/: apps.py  urls.py  views.py
ailearn/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
chat/: consumers.py  urls.py  views.py
index/: urls.py  views.py
paper/: models.py  urls.py  views.py
paper/migrations/: 0001_initial.py  0002_answer_date.py
problem/: models.py  urls.py  views.py
problem/migrations/: 0001_initial.py  0002_problem_facility.py  0003_solution_problem.py  0004_solution_date.py  0005_problem_date.py  0006_slncomment.py
problem/templatetags/: markdown.py
static/css/: chat.css  style.css
tag/: models.py  urls.py  views.py
tag/migrations/: 0001_initial.py  0002_tag_user.py  0003_usertagweight.py  0004_alter_usertagweight_tag.py
templates/: 403.html  404.html  base.html
templates/component/: sidebar.html
user/: admin.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_facility_user_role_user_facility.py  0003_alter_user_avatar.py  0004_alter_user_avatar.py  0005_alter_user_role.py  0006_facility_secret.py
zone/: models.py  urls.py  views.py
zone/migrations/: 0001_initial.py  0002_post_title_comment.py  0003_comment_post.py  0004_post_facility.py
(+37 files in other folders)
